--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مريم مسعي-أحمد - أخصائية ومعالجة نفسانية | Constantine, Algeria</title>
+    <title>مريم مسعي-أحمد - أخصائية ومعالجة نفسانية | قسنطينة، الجزائر</title>
     <meta name="description" content="أخصائية ومعالجة نفسانية، كاتبة، باحثة ومدربة. جلسات علاج نفسي عبر الإنترنت وشخصياً في قسنطينة، الجزائر">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -118,7 +118,7 @@
         <div class="container">
             <div class="section-header">
                 <span class="section-label" data-ar="الخدمات" data-fr="Services" data-en="Services">الخدمات</span>
-                <h2 class="section-title" data-ar="كيف يمكنني مساعدتك" data-fr="Comment puis-je vous aider" data-en="How I Can Help You">كيف يمكنني مساعدتك</h2>
+                <h2 class="section-title" data-ar="مجالات المرافقة النفسية" data-fr="Parcours d’accompagnement" data-en="Paths of Support">مجالات المرافقة النفسية</h2>
             </div>
             <div class="services-grid">
                 <div class="service-card">
@@ -287,7 +287,7 @@
                     <div class="activity-card">
                         <div class="activity-date">
                             <span class="day">15</span>
-                            <span class="month" data-ar="يناير 2025" data-fr="Janvier 2025" data-en="January 2025">يناير 2025</span>
+                            <span class="month" data-ar="يناير 2026" data-fr="Janvier 2026" data-en="January 2026">يناير 2026</span>
                         </div>
                         <div class="activity-info">
                             <span class="activity-type" data-ar="ورشة عمل" data-fr="Atelier" data-en="Workshop">ورشة عمل</span>
@@ -303,7 +303,7 @@
                     <div class="activity-card">
                         <div class="activity-date">
                             <span class="day">28</span>
-                            <span class="month" data-ar="يناير 2025" data-fr="Janvier 2025" data-en="January 2025">يناير 2025</span>
+                            <span class="month" data-ar="يناير 2026" data-fr="Janvier 2026" data-en="January 2026">يناير 2026</span>
                         </div>
                         <div class="activity-info">
                             <span class="activity-type" data-ar="ندوة" data-fr="Séminaire" data-en="Seminar">ندوة</span>
@@ -323,7 +323,7 @@
                     <div class="activity-card past">
                         <div class="activity-date">
                             <span class="day">10</span>
-                            <span class="month" data-ar="ديسمبر 2024" data-fr="Décembre 2024" data-en="December 2024">ديسمبر 2024</span>
+                            <span class="month" data-ar="ديسمبر 2025" data-fr="Décembre 2025" data-en="December 2025">ديسمبر 2025</span>
                         </div>
                         <div class="activity-info">
                             <span class="activity-type" data-ar="مؤتمر" data-fr="Conférence" data-en="Conference">مؤتمر</span>
@@ -338,7 +338,7 @@
                     <div class="activity-card past">
                         <div class="activity-date">
                             <span class="day">05</span>
-                            <span class="month" data-ar="نوفمبر 2024" data-fr="Novembre 2024" data-en="November 2024">نوفمبر 2024</span>
+                            <span class="month" data-ar="نوفمبر 2025" data-fr="Novembre 2025" data-en="November 2025">نوفمبر 2025</span>
                         </div>
                         <div class="activity-info">
                             <span class="activity-type" data-ar="دورة تدريبية" data-fr="Formation" data-en="Training">دورة تدريبية</span>
@@ -481,7 +481,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 <span data-ar="مريم مسعي-أحمد. جميع الحقوق محفوظة." data-fr="Maryam Messai-Ahmed. Tous droits réservés." data-en="Maryam Messai-Ahmed. All rights reserved.">مريم مسعي أحمد. جميع الحقوق محفوظة.</span></p>
+                <p>&copy; 2026 <span data-ar="مريم مسعي-أحمد. جميع الحقوق محفوظة." data-fr="Maryam Messai-Ahmed. Tous droits réservés." data-en="Maryam Messai-Ahmed. All rights reserved.">مريم مسعي أحمد. جميع الحقوق محفوظة.</span></p>
             </div>
         </div>
     </footer>
